# EUC_Leadership_Dashboard

./: .gitignore  CLAUDE.md  CLAUDE.md.save  README.md  main.py  pyproject.toml
dashboard/: .env.example  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/(dashboard)/: layout.tsx  overview-client.tsx  page.tsx
dashboard/components/charts/: barrier-roi-chart.tsx  benefits-cliff.tsx  cohort-comparison.tsx  investment-flow.tsx  investment-thesis-cards.tsx  learning-curve.tsx  navigator-quadrant.tsx  risk-return-scatter.tsx  waterfall-roi.tsx
dashboard/components/dashboard/: animated-value.tsx  data-table.tsx  kpi-card.tsx  sidebar.tsx  topbar.tsx
dashboard/components/fundraising/: meeting-prep-section.tsx
dashboard/components/meeting-prep/: barrier-roi-chart.tsx  cliff-success-card.tsx  data-quality-card.tsx  learning-curve-chart.tsx  story-carousel.tsx  (+3 more)
dashboard/hooks/: useCountUp.ts
dashboard/lib/: motion.ts
dashboard/scripts/: add-children-column.ts  calculate-roi.py  generate-fundraising-insights.py  generate-stories-data.py  generate-temporal-insights.py  migrate-data.ts
docs/: analysis-tasks.md  cleaning_log.md  data-dictionary.md  data_issues_log.md  euc-context.md
landing/: package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
pipeline/: __init__.py
pipeline/analytics/: generate.py  metrics.py  roi.py
pipeline/etl/: __init__.py  pipeline.py  transform.py
src/analytics/: __init__.py  cliff.py  generate.py
src/etl/: config.py  journey.py  load.py  pipeline.py
(+49 files in other folders)
