[project]
name = "euc-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "pytest>=9.0.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]
